src/objects/Question_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Code__c</fullName>
        <label>Answer Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Supplied__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer Supplied</label>
        <referenceTo>Question_Answer__c</referenceTo>
        <relationshipLabel>Questions &amp; Answers (Answer Supplied)</relationshipLabel>
        <relationshipName>Questions_Answers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Question</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Question</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Question_Answer__c</referenceTo>
        <relationshipLabel>Next Question</relationshipLabel>
        <relationshipName>Next_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Question to which answers are related</description>
        <label>Parent Question</label>
        <referenceTo>Question_Answer__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Questions_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Solution</label>
        <referenceTo>Question_Answer__c</referenceTo>
        <relationshipLabel>Solution Keys</relationshipLabel>
        <relationshipName>Solution_Key</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session Name</label>
        <referenceTo>Question_Answer__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Key_2__c</fullName>
        <label>Solution Key 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Key__c</fullName>
        <label>Solution Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Text__c</fullName>
        <label>Solution Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Question &amp; Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Text__c</columns>
        <columns>Next_Question__c</columns>
        <columns>Parent_Question__c</columns>
        <columns>Session_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Questions</fullName>
        <columns>NAME</columns>
        <columns>Text__c</columns>
        <columns>Next_Question__c</columns>
        <columns>Parent_Question__c</columns>
        <columns>Session_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Question_Answer__c.Question</value>
        </filters>
        <label>Questions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Solutions</fullName>
        <columns>NAME</columns>
        <columns>Text__c</columns>
        <columns>Next_Question__c</columns>
        <columns>Parent_Question__c</columns>
        <columns>Session_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Question_Answer__c.Solution</value>
        </filters>
        <label>Solutions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>QA-{0000000}</displayFormat>
        <label>Question &amp; Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions &amp; Answers</pluralLabel>
    <recordTypes>
        <fullName>Answer</fullName>
        <active>true</active>
        <label>Answer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Question</fullName>
        <active>true</active>
        <label>Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>Session</fullName>
        <active>true</active>
        <label>Session</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solution</fullName>
        <active>true</active>
        <label>Solution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solution_Key</fullName>
        <active>true</active>
        <label>Solution Key</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplied_Answer</fullName>
        <active>true</active>
        <label>Supplied Answer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>